style: fix emote/background overlap

--- a/phaxbot/chat_overlay/web/static/styles.css
+++ b/phaxbot/chat_overlay/web/static/styles.css
@@ -80,19 +80,19 @@ body {
 }
 
 .emote {
-	height: 1.5em;
+	height: auto;
 	margin: -0.3em auto;
+	position: relative;
 	vertical-align: middle;
 	width: 1.5em;
+	z-index: 100;
 }
 
 .text.emote-only .emote {
-	height: 3em;
 	margin: 0 auto;
 	width: 3em;
 }
 
 .text.emote-only.yuge .emote {
-	height: 6em;
 	width: 6em;
 }
